--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev --turbopack",
-        "build": "next build",
-        "start": "next start",
-        "lint": "eslint"
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "node server.js",
+    "lint": "eslint"
     },
     "dependencies": {
         "lenis": "^1.3.11",
